--- a/src/pages/Restaurant/index.module.scss
+++ b/src/pages/Restaurant/index.module.scss
@@ -8,8 +8,14 @@
     padding: 10px;
 
     height: 100%;
+    box-sizing: border-box;
+    overflow: none;
 
     &__content {
+        height: calc(100% - #{$list-entry-height});
+
+        overflow-y: scroll;
+
         & > h2 {
             padding-bottom: 10px;
             margin-bottom: 0px;
